--add: attempt to prevent refresh of page while drawing on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -6,6 +6,7 @@ main,
 }
 
 body {
+    overscroll-behavior-y: contain;
     background-color: ghostwhite;
 }
 
